--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.space-20{
+  width: 100%;
+  height: 20px;
+}
+.space-50{
+  width: 100%;
+  height: 50px;
+}
+
